--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,14 @@
 
         <div class="navigation-wrapper">
 
+          {% if site.author.show_rss %}
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
             </ul>
           </nav>
+          {% endif %}
+
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
@@ -77,6 +80,7 @@
               </li>
             {% endif %}
 
+              {% if site.author.show_rss %}
             <!-- RSS -->
             <li class="navigation__item">
               <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
@@ -84,6 +88,7 @@
                 <span class="label">RSS</span>
               </a>
             </li>
+              {% endif %}
 
             </ul>
           </nav>
