--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1625,12 +1625,13 @@ input[type="tel"] {
 
 	.navigation-wrapper {
 		display: none;
+		align-content: center;
 		position: fixed;
 		top: 42px;
 		right: 0;
 		left: 0;
 		width: 100%;
-		padding: 20px 0;
+		padding: 0 0;
 		background: rgba(51, 51, 51, 0.98);
 		border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
 		.navigation-wrapper.visible {
