--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             {% if site.show_blog %}
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button" target="_blank">Blog</a></li>
             </ul>
             {% endif %}
           </nav>
